Adicionei um parágrafo

--- a/Site_exemplo/index.html
+++ b/Site_exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá. mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, excepturi possimus! Dolores modi et cum praesentium tempore voluptatem, vitae aspernatur sint mollitia dicta, velit reiciendis illum, similique at molestias distinctio.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum at voluptate officia natus esse dolor voluptatibus ratione laudantium rerum accusamus expedita illo placeat nemo sint amet neque, perferendis quos dicta?</p>
 </body>
 </html>
